--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,16 @@
     animation: fade-in 2s;
 }
 
-.BannerContactIMG {
+.vh-100 {
     height: 100vh;
+}
+
+.vh-75 {
+    height: 75vh;
+}
+
+.vh-50 {
+    height: 50vh;
 }
 
 @keyframes fade-in {
